<resources>
    <string name="app_name">globetrotter</string>
    <!--Welcome Page-->
    <string name="login">Login</string>
    <string name="register">Register!</string>
    <!--Login Page-->
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <!--Register Page-->
    <string name="passwordrepeat">Password again</string>
    <string name="username">Username</string>
    <string name="namesurname">Name and Surname</string>
    <!--Error Messages-->
    <string name="fillblanks">Please fill all the information requested!</string>
    <string name="fillname">Please fill Name and Surname section!</string>
    <string name="fillpassword">Please fill Password section!</string>
    <string name="nomatchpassword">Passwords does not match!</string>
    <string name="fillusername">Please fill Username section!</string>
    <string name="fillemail">Please fill E-mail information!</string>
    <string name="wrongpassword">Wrong Password!</string>
    <string name="nosuchuser">User does not exist!</string>
    <string name="validmail">Please enter a valid mail address!</string>
    <string name="shortpassword">Minimum password character should be 6 characters!</string>
    <string name="pleasewait">Please Wait...</string>
    <string name="nomarker">You have not selected any point on map!</string>

    <!--Information Messages-->
    <string name="logginin">Logging in...</string>
    <string name="loginsuccess">Login Successful!</string>
    <string name="errorcodeoccurred"> : Error code occured</string>
    <string name="registeringuser">Registration on progress...</string>
    <string name="registrationsuccess">Registration successful!</string>
    <string name="registrationfail">Registration is failed!</string>
    <string name="titlemarker">Change title by clicking here!</string>
    <string name="changetitle">Change Title</string>
    <string name="change">Change</string>
    <string name="cancel">Cancel</string>
    <string name="currentloc">Your current location is here!</string>
    <string name="title">Title</string>
    <string name="detailstoroute">Details about route</string>
    <string name="save">Save</string>
    <string name="savesuccesfull">Saved successfully!</string>

    <!--Tutorial Texts-->
    <string name="feedexp">You may see tour feed from here...</string>
    <string name="notificationexp">You can see your notifications here...</string>
    <string name="messageexp">We keep your messages at this tab...</string>
    <string name="profilexp">Your profile and your activity feed is here...</string>
    <string name="mapexp">This will send you to map that you can add routes...</string>
    <string name="ustood">Got it!</string>
</resources>
