<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="25dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_tourtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#80FFFFFF"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp">

            <EditText
                android:id="@+id/input_tourtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_tourdetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#80FFFFFF"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp">

            <EditText android:inputType="textMultiLine"
            android:lines="8"
            android:gravity="top|left"
            android:hint="@string/detailstoroute"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:scrollbars="vertical"
            />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"></LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:weightSum="2"
                android:gravity="right">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/save"
                    android:id="@+id/button2"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/loginbutton" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>